--- a/meditation/style.css
+++ b/meditation/style.css
@@ -5,7 +5,14 @@
 }
 
 .app {
-  height: 100vh;
+  height: 60vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-family: "Montserrat", sans-serif;
+}
+.app1 {
+  height: 20vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -14,18 +21,16 @@
 
 .time-select,
 .sound-picker {
-  height: 80%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
   flex: 1;
 }
 .time-select button,
 .sound-picker button {
   color: white;
-  width: 30%;
-  height: 10%;
+  width: 70%;
   background: none;
   font-size: 20px;
   border-radius: 5px;
@@ -42,10 +47,10 @@
   border-radius: 50%;
 }
 .sound-picker button:nth-child(1) {
-  background: #4972a1;
+  background: rgba(0, 128, 0, 0.753);
 }
 .sound-picker button:nth-child(2) {
-  background: #a14f49;
+  background: rgba(0, 0, 273, 0.553);
 }
 .sound-picker button img {
   height: 100%;
@@ -85,9 +90,12 @@
 }
 
 video {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
-  top: 0%;
-  left: 0%;
-  width: 100%;
+  top: 0;
+  left: 0;
   z-index: -10;
 }
+
